--- a/src/pages/[regular].astro
+++ b/src/pages/[regular].astro
@@ -31,6 +31,7 @@ const { title, meta_title, description, image } = page.data;
   meta_title={meta_title}
   description={description}
   image={image}
+  noindex={page.data.noindex}
 >
   {
     postsSlug.includes(page.id) ? (
