meta name google-site-verification

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -43,6 +43,7 @@ const { title, meta_title, description, image, noindex, canonical } =
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="joKEnFQjJeHaLmFeFRONtIS-CCZVn27ghNPV4R3pPK4" />
     <!-- favicon -->
     <link rel="shortcut icon" href={config.site.favicon} />
     <!-- theme meta -->
